--- a/Lesson4/style.css
+++ b/Lesson4/style.css
@@ -77,6 +77,7 @@
     margin: 10px;
     box-shadow: 20px;
     border-radius: 10px;
+    box-shadow:5px 5px 5px gray;
 }
 .left{
     width: 60%;
@@ -107,6 +108,7 @@
     background-color:rgb(215, 203, 203);
     color:azure;
     text-align: left;
+    box-shadow:5px 5px 5px gray;
 } 
 p{
     padding-top: 25px;
